// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FirstNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="first_name"
      >
        Imię
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="Imię"
          name="first_name"
          placeholder="Imię"
          value="3232"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<FirstNameField /> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="testId"
  label="Imię"
  name="first_name"
  placeholder="Imię"
  value=""
/>
`;

exports[`<FirstNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="first_name"
      >
        FirstName1*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="FirstName1"
          name="first_name"
          placeholder="Imię*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<FirstNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="first_name"
      >
        FirstName
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="testId"
          label="FirstName"
          name="first_name"
          placeholder="Imię"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
